# xmacports

./: .bash_profile  .bashrc  .drone.yml  .editorconfig  .env.mk  .forward  .gitattributes  .gitconfig  .gitignore  .gitignore_global  .gitlab-ci.yml  .hushlogin  .mise.toml  .profile  .shellcheckrc  .sops.yaml  .vimrc  .zprofile  .zshrc  AGENTS.md  MANUAL.md  Makefile  README.md  bootstrap-private.sh  bootstrap.sh  pyproject.toml  test_ci.txt
.config/env.d/: default.sh  foundry.sh  platform.sh  proxy.sh  user-local-bin.sh
.config/gpg/: gpg-agent.conf  gpg.conf
.config/npm/: config
.config/ssh/: config
.config/vim/: privacy.vim  vimrc
.githooks/: pre-commit
.github/workflows/: test.yml
.zshrc.d/: aliases.sh  env.sh  functions.sh  prompt.sh
examples/: forward-local-example  gitconfig-local-example  gpg-agent-conf-example  prompt-demo.sh  ssh-config-example  timeout-prompt-usage.sh  vimrc-local-example  zshrc-local-example
keys/: iap-signing-key.asc
reviews/: DEEP_REVIEW_2026-07-15.md
scripts/: audit.sh  benchmark.sh  bootstrap-linux.sh  bootstrap-macos.sh  cleanup-7d.sh  cleanup-zsh.sh  cleanup.sh  compliance-check.sh  install-cleanup-job.sh  secret-parse.py  secrets-init.sh  shellcheck.sh  shfmt.sh  timeout_prompt.sh  uninstall-cleanup-job.sh  verify-migration.sh
secrets/: secrets.enc.yaml  secrets.secrets.yaml.example
shared/: aliases.sh  functions.sh  platform.sh  prompt.sh  secrets.sh
templates/: profile-local.example  server-profile.example
tests/: run-tests.sh  test-bootstrap.sh  test-functions.sh  test-secrets.sh  verify-dotfiles.sh
(+1 files in other folders)
